# building-on-MANTRA-chain

./: Cargo.toml  mantrachaind-cli.env  package-lock.json
contract/: .gitignore  .gitpod.Dockerfile  Cargo.toml  NOTICE  README.md  interact.js  mantrachaind-cli.env  package-lock.json  package.json
contract/examples/: schema.rs
contract/schema/: cw-to-do-list.json
contract/src/: contract.rs  error.rs  msg.rs  state.rs
interface/: .env  package-lock.json  package.json  vite.config.js
interface/src/: App.jsx  chain.js  index.css  main.jsx  theme.js
interface/src/hooks/: useTodoContract.js
interface/src/utils/: keplrUtils.js
src/: contract.rs  lib.rs  msg.rs  state.rs
