[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.0"
cw2 = "0.16"
cw-storage-plus = { version = "0.16", features = ["iterator"] } 
serde = { version = "1.0", features = ["derive"] }  
cosmwasm-schema = "1.1.1" 
schemars = "0.8.11"      
